--- a/contact.html
+++ b/contact.html
@@ -101,4 +101,45 @@
         <aside class="card pad">
           <h2 class="mt-0">Liever meteen plannen?</h2>
           <!-- Vervang door je echte Calendly-link of verwijder deze kaart -->
-          <p class="muted">Kies een moment dat past. We bellen/meet’n
+          <p class="muted">Kies een moment dat past. We bellen/meet’n kort om je vraag te kaderen.</p>
+          <a class="btn" href="https://calendly.com/jouw-calendly/intro" target="_blank" rel="noopener">Plan kennismaking</a>
+
+          <hr style="border:none; border-top:1px solid #273244; margin:16px 0;" />
+
+          <h3 class="mt-0">Andere contactopties</h3>
+          <ul class="muted" style="margin:0; padding-left:18px;">
+            <li><a href="mailto:info@buscemigroup.be">Mail ons</a> — we antwoorden snel.</li>
+            <li><a href="tel:+324XXXXXXXX">Bel ons</a> — tijdens kantooruren.</li>
+            <li><a href="/legal.html">Privacy & voorwaarden</a></li>
+          </ul>
+        </aside>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="container my-60">
+      <div class="cta center">
+        <p><strong>Twijfel je wat het meeste oplevert?</strong> Stuur je situatie kort door; we denken mee.</p>
+        <a class="btn" href="mailto:info@buscemigroup.be">Mail ons</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
+      <div class="muted">
+        <a href="/legal.html">Privacy & Voorwaarden</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Geen plausible/cookie scripts op deze pagina -->
+  <script>
+    (function(){
+      var y=document.getElementById('year');
+      if (y) y.textContent=new Date().getFullYear();
+    }());
+  </script>
+</body>
+</html>
