--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Marketing & Consultancy voor ambitieuze KMO’s | Buscemi Group</title>
-  <meta name="description" content="Wij helpen KMO’s groeien met heldere strategie, efficiënte uitvoering en meetbare KPI’s – marketing & consultancy onder één dak." />
-  <link rel="canonical" href="https://www.buscemigroup.be/" />
+<meta name="description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
+
+    <link rel="canonical" href="https://www.buscemigroup.be/" />
   <meta name="theme-color" content="#0d1425" />
 
   <!-- Fonts (overweeg later self-hosting voor performance) -->
