--- a/diensten/index.html
+++ b/diensten/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Diensten voor KMO’s | Buscemi Group</title>
-  <meta name="description" content="Overzicht van onze diensten voor KMO’s: Marketing en Consultancy. Duidelijke aanpak, meetbare KPI’s en praktische uitvoering." />
+  <title>Diensten voor KMO’s: Marketing & Consultancy | Buscemi Group</title>
+ <meta name="description" content="Ontdek onze diensten voor KMO’s: marketing die resultaat oplevert en consultancy die kosten verlaagt en processen optimaliseert." />
+
   <link rel="canonical" href="https://www.buscemigroup.be/diensten/" />
   <meta name="theme-color" content="#0d1425" />
   <link rel="stylesheet" href="/style.css" />
