--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Marketing voor KMO’s | Buscemi Group</title>
-  <meta name="description" content="Van social media tot advertenties: wij zorgen voor consistente marketing die meetbare resultaten oplevert voor KMO’s." />
+ <title>Marketing voor KMO’s | Buscemi Group</title>
+<meta name="description" content="Van social media tot advertenties: wij zorgen voor consistente marketing die meer leads en omzet oplevert voor KMO’s." />
+
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/utilities.css" />
 </head>
