--- a/diensten/consultancy.html
+++ b/diensten/consultancy.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Consultancy voor KMO’s | Buscemi Group</title>
-  <meta name="description" content="Praktische consultancy voor KMO’s: kostenoptimalisatie, strategie en efficiëntere processen. Snel resultaat met een haalbaar plan en duidelijke KPI’s." />
+ <title>Consultancy voor KMO’s | Buscemi Group</title>
+<meta name="description" content="Praktische consultancy voor KMO’s: kostenoptimalisatie, betere processen en een helder groeiplan met duidelijke KPI’s." />
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/utilities.css" />
 
