--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact | Buscemi Group</title>
-  <meta name="description" content="Neem contact op met Buscemi Group. We antwoorden binnen één werkdag." />
+ <title>Contacteer ons | Buscemi Group</title>
+<meta name="description" content="Neem contact op met Buscemi Group voor een vrijblijvende kennismaking. We antwoorden binnen één werkdag." />
   <meta name="theme-color" content="#0d1425" />
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="/utilities.css" />
