--- a/legal.html
+++ b/legal.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy, Cookies & Voorwaarden | Buscemi Group</title>
-  <meta name="description" content="Privacyverklaring, cookiebeleid en algemene voorwaarden van Buscemi Group." />
+  <title>Privacy & Voorwaarden | Buscemi Group</title>
+<meta name="description" content="Lees hier de privacyverklaring, cookiebeleid en algemene voorwaarden van Buscemi Group." />
+
   <link rel="canonical" href="https://www.buscemigroup.be/legal.html" />
   <meta name="theme-color" content="#0d1425" />
 
