--- a/bedankt.html
+++ b/bedankt.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bedankt — We hebben je bericht ontvangen | Buscemi Group</title>
-  <meta name="robots" content="noindex, nofollow" />
+ <title>Bedankt voor je bericht | Buscemi Group</title>
+<meta name="description" content="Bedankt voor je bericht. We nemen binnen één werkdag contact met je op." />
+<meta name="robots" content="noindex, nofollow" />
+
   <meta name="theme-color" content="#0d1425" />
 
   <!-- Fonts (optioneel dezelfde als op de site) -->
