--- a/over.html
+++ b/over.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Over ons — Buscemi Group</title>
-<meta name="description" content="Wie we zijn en waar we voor staan."/>
+<title>Over Buscemi Group | Marketing & Consultancy voor KMO’s</title>
+<meta name="description" content="Buscemi Group helpt KMO’s groeien met strategisch advies en marketing. Lees meer over onze visie en aanpak." />
 <meta name="theme-color" content="#0e4d38"/>
 <link rel="preconnect" href="https://fonts.googleapis.com"/>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
