--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Marketing & Consultancy voor ambitieuze KMO’s | Buscemi Group</title>
+  <meta name="description" content="Buscemi Group — [korte, concrete one-liner over je diensten].">
+<link rel="canonical" href="https://buscemigroup.be/">
+
+<!-- Social / Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://buscemigroup.be/">
+<meta property="og:title" content="Buscemi Group">
+<meta property="og:description" content="Buscemi Group — [zelfde one-liner].">
+<meta property="og:image" content="/assets/og-cover.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
 <meta name="description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
 
     <link rel="canonical" href="https://www.buscemigroup.be/" />
