--- a/over.html
+++ b/over.html
@@ -1,79 +1,167 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl-BE">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Over Buscemi Group | Marketing & Consultancy voor KMO’s</title>
-<meta name="description" content="Buscemi Group helpt KMO’s groeien met strategisch advies en marketing. Lees meer over onze visie en aanpak." />
-<meta name="theme-color" content="#0e4d38"/>
-<link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="style.css"/>
-<link rel="icon" type="image/png" href="assets/favicon.png"/>
-<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
-<meta property="og:title" content="Over ons — Buscemi Group"/>
-<meta property="og:description" content="Wie we zijn en waar we voor staan."/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://www.buscemigroup.be/over.html"/>
-<link rel="canonical" href="https://www.buscemigroup.be/over.html"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Over | Buscemi Group</title>
+  <meta name="description" content="Over Buscemi Group: strategie, marketing en consultancy voor KMO’s. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
+  <link rel="canonical" href="https://buscemigroup.be/over.html" />
+  <meta name="theme-color" content="#0d1425" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/utilities.css" />
+
+  <!-- Icons & PWA -->
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://buscemigroup.be/over.html" />
+  <meta property="og:site_name" content="Buscemi Group" />
+  <meta property="og:title" content="Over Buscemi Group" />
+  <meta property="og:description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
+  <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
+  <meta property="og:locale" content="nl_BE" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Over Buscemi Group" />
+  <meta name="twitter:description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
+  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
+
+  <!-- Skip-link styling (veilig) -->
+  <style>
+    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
+    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+  </style>
 </head>
 <body>
+  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-<header>
-  <div class="container nav">
-    <a class="brand" href="index.html"><img src="assets/logo.png" alt="Buscemi Group"/></a>
-    <nav class="nav-links" aria-label="Hoofdnavigatie">
-      <a href="over.html">Over</a>
-      <div class="dropdown">
-        <a href="diensten/index.html">Diensten ▾</a>
-        <div class="dropdown-content" role="menu">
-          <a href="diensten/marketing.html">Marketing</a>
-          <a href="diensten/consultancy.html">Consultancy</a>
-        </div>
-      </div>
-      <a href="insights/index.html">Insights</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <a class="btn" href="contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
-  </div>
-</header>
+  <!-- Header/nav consistent met index.html -->
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
+      </a>
 
-<main class="container">
-  <section class="subpage-hero">
-    <h1>Over ons</h1>
-    <p class="sub">Een boutique partner voor ondernemers die helderheid en groei zoeken.</p>
-  </section>
-  <div class="content" style="padding:32px 0">
-    <p>Buscemi Group combineert KMO-management met marketing en strategie. We werken pragmatisch en resultaatgericht: wat rendeert komt op de eerste plaats.</p>
-    <h3>Missie</h3>
-    <p>Wij helpen KMO’s hun potentieel waarmaken door strategie en uitvoering helder, concreet en haalbaar te maken.</p>
-    <h3>Onze waarden</h3>
-    <ul>
-      <li><strong>Kwaliteit</strong> — werk waar je op kan bouwen</li>
-      <li><strong>Vertrouwen</strong> — openheid en eerlijkheid</li>
-      <li><strong>Duurzame groei</strong> — resultaten die blijven duren</li>
-    </ul>
-    <div class="cta" style="margin-top:36px">
-      <p><strong>Wil je weten of we een match zijn?</strong> Plan een korte call en we denken graag mee.</p>
-      <a class="btn" href="contact.html">Plan gesprek</a>
+      <button class="burger"
+              data-nav-toggle
+              aria-label="Hoofdmenu"
+              aria-expanded="false"
+              aria-controls="site-menu">☰</button>
+
+      <nav id="site-menu"
+           class="nav-links"
+           data-nav-menu
+           aria-label="Hoofdnavigatie"
+           aria-hidden="true">
+        <ul class="menu">
+          <li><a href="/over.html" data-nav-link>Over</a></li>
+          <li>
+            <details class="dropdown">
+              <summary>Diensten</summary>
+              <ul class="submenu">
+                <li><a href="/diensten/marketing.html" data-nav-link>Marketing</a></li>
+                <li><a href="/diensten/consultancy.html" data-nav-link>Consultancy</a></li>
+              </ul>
+            </details>
+          </li>
+          <li><a href="/insights/index.html" data-nav-link>Insights</a></li>
+          <li><a href="/contact.html" data-nav-link>Contact</a></li>
+        </ul>
+      </nav>
+
+      <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
     </div>
-  </div>
-</main>
+  </header>
 
-<footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="legal.html">Privacy</a> • <a href="legal.html">Cookies</a> • <a href="legal.html">Algemene voorwaarden</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-<script src="cookie.js"></script>
-<script src="/js/analytics.js" defer></script>
+  <main id="main">
+    <!-- Subpage hero -->
+    <section class="subpage-hero">
+      <div class="container">
+        <h1>Over Buscemi Group</h1>
+        <p class="sub mx-auto max-w-760">Wij helpen KMO’s groeien met strategie, marketing en consultancy. Geen wollige presentaties, wel concreet advies en uitvoering met KPI’s.</p>
+      </div>
+    </section>
 
-<script src="nav.js"></script>
+    <!-- Content -->
+    <section class="container content">
+      <div class="grid-2">
+        <article>
+          <h2>Wat ons drijft</h2>
+          <p class="muted">We combineren praktijkervaring in KMO-management met marketingexpertise. Zo maken we strategieën die uitvoerbaar zijn, met meetbare impact op omzet, marge en efficiëntie.</p>
+          <ul>
+            <li>Strategie en uitvoering onder één dak</li>
+            <li>Heldere rapportering en concrete next steps</li>
+            <li>Focus op rendement en operationele efficiëntie</li>
+          </ul>
 
-<div class="sticky-cta"><a class="btn" href="contact.html">Plan gesprek</a></div>
+          <h2 class="mt-36">Werkwijze</h2>
+          <div class="grid-3 mt-12">
+            <div class="card pad tile"><h3>1. Analyse</h3><p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke doelstellingen.</p></div>
+            <div class="card pad tile"><h3>2. Plan</h3><p>Roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p></div>
+            <div class="card pad tile"><h3>3. Uitvoering</h3><p>Implementatie, testing en continue optimalisatie. Heldere rapportering.</p></div>
+          </div>
+        </article>
+
+        <aside class="card pad">
+          <h2 class="mt-0">Feiten & cijfers</h2>
+          <ul class="muted">
+            <li>Sectorfocus: KMO’s (B2B en B2C)</li>
+            <li>Diensten: strategie, marketing, consultancy</li>
+            <li>Tools: data & AI waar het waarde toevoegt</li>
+          </ul>
+
+          <h3 class="mt-24">Waarmee kunnen we jou helpen?</h3>
+          <p class="muted">Van kostenoptimalisatie en go-to-market tot performance marketing en content: we bouwen een plan dat werkt voor jouw realiteit.</p>
+          <p class="mt-12"><a class="btn" href="/contact.html">Plan kennismaking</a></p>
+        </aside>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="container my-60 mx-auto">
+      <div class="cta">
+        <p><strong>Klaar om je bedrijf te laten groeien?</strong> Plan een kort kennismakingsgesprek.</p>
+        <a class="btn" href="/contact.html">Plan kennismaking</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
+      <div class="muted">
+        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="/cookie.js" defer></script>
+  <script src="/js/analytics.js" defer></script>
+  <script src="/nav.js" defer></script>
+
+  <!-- Jaar in footer -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      var y = document.getElementById('year');
+      if (y) y.textContent = new Date().getFullYear();
+    });
+  </script>
+
+  <!-- No-JS fallback voor menu -->
+  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
+
+  <!-- Sticky CTA -->
+  <div class="sticky-cta"><a class="btn" href="/contact.html">Plan kennismaking</a></div>
 </body>
 </html>
